tests/machine/x/go/tree_sum.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/tree_sum.go:45:29: Leaf (type) is not an expression

1: //go:build ignore
